--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "candy-machine-mint",
+  "homepage": "http://bernardo9999.github.io/candy-machine-mint",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
